# simplify

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md  bootstrap.py
gypi/: common.gypi  os.gypi
scripts/: daijirin.js  daijisen.js  shinmeikai.js
simplify/: CMakeLists.txt  config.cc  config.h.in  config.hh  dictionary.cc  dictionary.hh  epwing-dictionary-js.hh  epwing-dictionary.cc  error.cc  error.hh  likely.hh  repository.cc  repository.hh  simplify.cc  simplify.gyp  simplify.hh  utils.cc  utils.hh
simplify/c/: dictionary.cc  dictionary.h  error.cc  error.h  repository.cc  repository.h
simplify/epwing/: epwing-dictionary.cc  epwing-dictionary.hh  eucjp_ucs2.hh  hook.cc  hook.hh
simplifyd/: CMakeLists.txt  action.cc  action.hh  articleaction.cc  articleaction.hh  config.h.in  contextaction.cc  contextaction.hh  hash.cc  hash.hh  htmlprinter.cc  htmlprinter.hh  httpquery.cc  httpquery.hh  httpresponse.cc  httpresponse.hh  main.cc  mongoose.c  mongoose.h  options.cc  options.hh  searchaction.cc  searchaction.hh  server.cc  server.hh  simplifyd.gyp
simplifyd/html/: index.html
simplifyd/html/css/: simplify.css
simplifyd/html/js/: jquery.bbq-1.3pre.js  jquery.bbq.js  jquery.tools.js  simplify-0.1.0.js  simplify.app-0.1.0.js
